# jbuchong

.github/workflows/: gradle.yml  rust.yml
java/: README.md  build.gradle
java/src/main/java/io/github/worksoup/: JBuChongPair.java  JBuChongTriple.java  JBuChongUtils.java  LumiaPair.java  LumiaTriple.java  LumiaUtils.java  Main.java
java/src/main/java/io/github/worksoup/function/: JBuChongBiConsumer.java  JBuChongBiFunction.java  JBuChongComparator.java  JBuChongConsumer.java  JBuChongFunction.java  JBuChongPredicate.java  JBuChongSupplier.java  LumiaBiConsumer.java  LumiaBiFunction.java  LumiaComparator.java  LumiaConsumer.java  LumiaFunction.java  LumiaPredicate.java  LumiaSupplier.java
java/src/main/kotlin/io/github/worksoup/function/: JBuChongKtFunc0.kt  JBuChongKtFunc1.kt  JBuChongKtFunc10.kt  JBuChongKtFunc11.kt  JBuChongKtFunc12.kt  JBuChongKtFunc13.kt  JBuChongKtFunc14.kt  JBuChongKtFunc15.kt  JBuChongKtFunc16.kt  JBuChongKtFunc2.kt  JBuChongKtFunc3.kt  JBuChongKtFunc4.kt  JBuChongKtFunc5.kt  JBuChongKtFunc6.kt  (+20 more)
rust/: Cargo.toml  README.md
rust/crates/jbc_base/: Cargo.toml
rust/crates/jbc_base/src/: data_wrapper.rs  lib.rs  traits.rs  types.rs  utils.rs
rust/crates/jbc_derive/: Cargo.toml
rust/crates/jbc_derive/src/: lib.rs
rust/crates/jclosure/: Cargo.toml
rust/crates/jclosure/src/: bi_consumer.rs  bi_function.rs  comparator.rs  consumer.rs  ffi_internal_test.rs  function.rs  interface.rs  lib.rs  predicate.rs  supplier.rs  utils.rs
rust/crates/jclosure/src/kotlin/: func0.rs  func1.rs  func2.rs  func3.rs  mod.rs
rust/src/: lib.rs
