[package]
name = "jbuchong"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[workspace]
resolver = "2"
members = [
    "crates/*",
]
default-members = ["crates/*"]

[dependencies]
jbc_base = { path = "./crates/jbc_base" }
jbc_derive = { path = "./crates/jbc_derive" }
jclosure = { path = "./crates/jclosure" }


[workspace.dependencies]
j4rs = "0.20"
j4rs_derive = "0.1"